--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
         "express": "^4.17.1",
         "express-session": "^1.17.2",
         "helmet": "^4.6.0",
+        "joi": "^17.4.2",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.0.7",
         "passport": "^0.5.0",
