--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,8 @@
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.0.7",
         "passport": "^0.5.0",
-        "passport-google-oauth20": "^2.0.0"
+        "passport-google-oauth20": "^2.0.0",
+        "passport-jwt": "^4.0.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.15.7",
