--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
         "classnames": "^2.3.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-rating-stars-component": "^2.2.0",
         "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
         "react-slick": "^0.28.1",
