--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "aws-sdk": "^2.999.0",
+        "aws-sdk": "^2.957.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "cors": "^2.8.5",
@@ -22,6 +22,7 @@
         "joi": "^17.4.2",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.0.7",
+        "multer": "^1.4.3",
         "passport": "^0.5.0",
         "passport-google-oauth20": "^2.0.0",
         "passport-jwt": "^4.0.0"
