--- a/server/package.json
+++ b/server/package.json
@@ -21,11 +21,14 @@
         "helmet": "^4.6.0",
         "joi": "^17.4.2",
         "jsonwebtoken": "^8.5.1",
+        "mailgun-js": "^0.22.0",
         "mongoose": "^6.0.7",
         "multer": "^1.4.3",
         "passport": "^0.5.0",
         "passport-google-oauth20": "^2.0.0",
-        "passport-jwt": "^4.0.0"
+        "passport-jwt": "^4.0.0",
+        "razorpay": "^2.0.7",
+        "uuid": "^8.3.2"
     },
     "devDependencies": {
         "@babel/cli": "^7.15.7",
